--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,11 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+html[data-theme='dark'] .theme-doc-markdown img {
+    filter: drop-shadow(0 0 5px #aaa);
+}
+
+.theme-doc-markdown img {
+    filter: drop-shadow(0 0 5px #eee);
+}
